fix(chore): fix jump on hover while animating shinny button

--- a/app/components/shared/Button/Button.module.css
+++ b/app/components/shared/Button/Button.module.css
@@ -30,6 +30,7 @@
 	color: var(--bg-color);
 	font-family: var(--cinzel);
 	overflow: hidden;
+	position: relative;
 }
 
 .button:active {
@@ -44,6 +45,7 @@
 	position: relative;
 	padding: 1rem;
 	text-align: center;
+	position: relative;
 }
 
 .shinny::before {
